<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BrainWaves</string>
    <string name="games">Games</string>
    <string name="play">Play</string>
    <string name="profile">Profile</string>
    <string name="daily">Daily</string>
    <string name="title_activity_list_of_games">List of Games</string>
    <string name="game1">Human Calculator</string>
    <string name="game2">Superhuman Calculato</string>
    <string name="game3">Logic Game</string>
    <string name="game4">Fast Tap</string>
    <string name="game5">Fast Tap</string>
    <string name="game6">Flash</string>
    <string name="game7">Simon</string>
    <string name="game8">Simon Advanced</string>
    <string name="game9">Math Quiz</string>
    <string name="game10">Light Vs Dark</string>
    <string name="game11">Game 11</string>
    <string name="game12">Game 12</string>
    <string name="title_activity_game1">Human Calculator</string>
    <string name="solve">Solve:\n</string>
    <string name="start">Start</string>
    <string name="timer">Timer</string>
    <string name="next">Next</string>
    <string name="problem1"> 5 + 3 = </string>
    <string name="problem2"> 5 * 3 = </string>
    <string name="problem3"> 6 - 2 = </string>
    <string name="problem4"> 6 / 3 = </string>
    <string name="tap">tap</string>
    <string name="Rotate">\nRotate</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="Question">How many sides does\n the shape have?</string>
    <string name="logicGame1">Logic Game 1</string>
    <string name="speedText">Tap the screen when it changes color!</string>
    <string name="fastTap">Fast Tap</string>
    <string name="yourName">Your Name</string>
    <string name="brainLevel">Brain Level: 10</string>
    <string name="age">Age: 21</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="title_activity_end_of_game">End of Game</string>
    <string name="end_of_game">Times up!\n Your Score:\n</string>
    <string name="back_Button">Home</string>
    <string name="play_again">Play Again</string>
    <string name="play_next">Play Next</string>
    <string name="score">0</string>
    <string name="title_activity_logic_game1">LogicGame1</string>
    <string name="title_activity_speed_game1">SpeedGame1</string>
    <string name="title_activity_reaction_game1">ReactionGame1</string>
    <string name="title_activity_profile">Profile</string>
    <string name="aboutActivityMainText">
    </string>
    <string name="soundEffectAttribution">
        <a href="https://freesound.org/people/qubodup/sounds/140773/">&#x20;Menu Ping - qubodup</a>\n
        <a href="https://freesound.org/people/edsward/sounds/341871/">Correct Ping - edsward</a>\n
        <a href="https://freesound.org/people/Uminari/sounds/389724/">Falling rock sound (in-game button) - Uminari</a>\n
        <a href="https://freesound.org/people/THE_bizniss/sounds/39459/">Laser sound (in-game button) - THE_bizniss</a>\n
        <a href="https://freesound.org/people/Snapper4298/sounds/178186/">Camera Click (in-game button) - Snapper4298</a>\n
        <a href="https://freesound.org/people/Heigh-hoo/sounds/9876/">Car Door Closing (in-game button) - Heigh-hoo</a>\n
        <a href="https://freesound.org/people/troym1/sounds/325443/">Wrong Voice Clip - troym1</a>\n
        <a href="https://pixabay.com/en/wallpaper-pattern-colorful-color-2574931/">Main Menu background - geralt</a>\n
        <a href="https://openclipart.org/detail/240278/birch-wood-texture">Game background - Wuzzy</a>
    </string>
    <string name="returnToMain">Return to Main Menu</string>
    <string name="howToPlayMainTextOriginal">
        Upon starting a game, Simon will start a pattern by lighting up one of the four colored buttons
        and playing a sound unique to that button. Your goal is to match that pattern that Simon plays,
        with each correct sequence adding another button to the end of the sequence.
        \n\nExample: If Simon lights up the blue button, you press the blue button. Then Simon lights up
        blue button and the red button, so you press the blue button and the red button in that order, continuing
        on until you make a mistake in the sequence.
        \n\nYour score at the end is however many buttons were in the last sequence successfully completed.
    </string>
    <string name="howToPlayMainTextGame1">
        Same as original Simon, but with two buttons added to the sequence each time instead of one! Are you sure you can keep up? Recommended for those with experience in PERL programming!
    </string>
    <string name="howToPlayMainTextGame2">
        Instead of repeating the sequence, you have to play the sequence back in reverse! Tricky tricky! Recommended for those looking for a challenge.
    </string>
    <string name="title_activity_simon_main">SimonMain</string>
    <string name="title_activity_simon_about">SimonAbout</string>
    <string name="title_activity_simon_how_to_play">SimonHowToPlay</string>
    <string name="title_activity_simon_game">SimonGame</string>
    <string name="title_activity_flash_game">FlashGame</string>
    <string name="button">Button</string>
    <string name="facebook_app_id">110352992777289</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="difficulty_level">Choose your difficulty level below to begin</string>
    <string name="easy">Easy</string>
    <string name="difficult">Difficult</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="countryerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="pwderror">Enter a valid password</string>
    <string name="title_activity_color_main">ColorMainActivity</string>
    <string name="tagline1">A SIMPLE</string>
    <string name="tagline2">COLOR</string>
    <string name="tagline3">GAME</string>
    <string name="points_text">Points</string>
    <string name="level_text">Level</string>
    <string name="Colorgame_help">Tap the lighter color FAST!</string>
    <string name="title_activity_game_over_color">GameOverColorActivity</string>
    <string name="game_over">Game Over</string>
    <string name="highscore">New High Score!</string>
    <string name="best_label">Best</string>
    <string name="retry_game">Replay</string>
    <string name="memory_game_finished_title">Memory</string>
    <string name="memory_game_finished_text">Play again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title2">Quiz</string>
    <string name="title1">Hello world!</string>
    <string name="title">Settings</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_highscore">Highscore</string>
    <string name="title_activity_score_screen">ScoreScreen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="ProfileAge">ProfileAge</string>
    <string name="ProfileEmail">email@address.com</string>
    <string name="ProfileName">Current Player</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="PlayerAddress">PlayerAddress</string>
    <string name="math_quiz_help">The point of this game is to answer the questions and get as many questions right as possible.
        If you are wrong or right you get instant feedback.
        You can also give up and enter a blank answer, this will be counted as wrong. Are you ready to take the challenge?</string>
    <string name="title_activity_profile_editor">ProfileEditor</string>
</resources>