<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/birch_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bignerdranch.android.brainwaves.ListOfGamesActivity"
    tools:showIn="@layout/activity_list_of_games">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="71dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        android:text="@string/title_activity_list_of_games"
        android:textColor="@android:color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonGame1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game1"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game2"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game3"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game4"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game5"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonGame6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game6"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonGame7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game7"
                android:textAllCaps="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonGame8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game8"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game9"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/buttonGame10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game10"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game11"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonGame12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/game12"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
