<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.brainwaves.MainMenuActivity"
    tools:layout_editor_absoluteY="81dp"
    android:theme="@style/brainstyle">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="40dp"
        android:text="@string/play"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/daily_button"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="68dp"
        android:text="@string/daily"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="364dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/daily_button">

        <Button
            android:id="@+id/profile_button"
            android:layout_width="155dp"
            android:layout_height="65dp"
            android:layout_marginEnd="9dp"
            android:layout_marginStart="28dp"
            android:text="@string/profile"
            android:textSize="30sp" />

        <Button
            android:id="@+id/list_of_games_button"
            android:layout_width="155dp"
            android:layout_height="65dp"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="27dp"
            android:text="@string/games"
            android:textSize="30sp" />

    </LinearLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="490dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="363dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="5dp"
        app:layout_constraintStart_toEndOf="@+id/play_button" />

</android.support.constraint.ConstraintLayout>
